[package]
name = "plen"
version = "0.1.0"
authors = ["Emil Segerbäck", "Malcolm Vigren"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "*"
bincode = "*"
rand = "*"
rand_derive = "*"
whoami = "*"
libplen = {path="libplen"}
unicode-truncate = "*"
enum-map = "*"
egui-macroquad = "*"
rapier2d = "*"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
