[package]
name = "libplen"
version = "0.1.0"
authors = ["Emil Segerbäck", "Malcolm Vigren"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
rand_derive = "*"
serde = "*"
serde_derive = "*"
strum = "*"
strum_macros = "*"
bincode = "*"
# enum_dispatch = "0.2.0"
enum-map = "*"
